Updqate of new info

--- a/index.html
+++ b/index.html
@@ -14597,7 +14597,32 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Bolt-restoran%C5%B3-darbo-laikas-ir-u%C5%BEimtumas">Bolt restoran&#371; darbo laikas ir u&#382;imtumas<a class="anchor-link" href="#Bolt-restoran%C5%B3-darbo-laikas-ir-u%C5%BEimtumas">&#182;</a></h2><p>Animuoti restoranų užimtumo žemėlapiai</p>
+<h2 id="Naktinio-Saimono-blogas">Naktinio Saimono blogas<a class="anchor-link" href="#Naktinio-Saimono-blogas">&#182;</a></h2><p><strong>Jūs pakliuvote į gan nuotykingą blogą, kuriame bandoma parodyti, kad kurjerio tašė ant pečių - ne vien vergystė.</strong></p>
+<p><b><font color='blue'> Atsibodo vergauti Woltui / Boltui? Prisijunkite prie naujos platformos kūrimo! </font></b> <a href="./journey_remarks/nauja_platforma.ipynb">Štai projekto vizija</a></p>
+<p><b><font color='green'> Įvariomis nuorodomis dalinuosi. </font></b>  <strong>Te:</strong></p>
+<ul>
+<li><p>Demūškė uždarbio pavaizdavimo dirbant per Bolt app'są: <a href="./stats/payments/2023-02-18/preview.html">2023-02-18</a></p>
+</li>
+<li><p>Inspiracijos:</p>
+<ul>
+<li>Besisvaiginančio kurjerio užrašai. Kiek rezistencinis reportažas apie tai, kaip buvo uždirbti 109 eurai per vieną parą su tik iki 60 km vienu įkrovimu galinčiu nuvažiuoti vienaračiu: <a href="./journey_remarks/2023_04_14.html">Štai jums nuoroda</a></li>
+<li>Kolegos, irgi dirbančio Bolt, blogas: <a href="https://bolt-eimz.onrender.com/">https://bolt-eimz.onrender.com/</a></li>
+<li><a href="https://www.youtube.com/watch?v=0NG6Dk47Zro">A short documentary about the legendary best PIZZA delivery man Biller Meier</a></li>
+</ul>
+</li>
+</ul>
+
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<h2 id="Pagrindinis-Naktinio-Saimono-projektas,-skirtas-gaudyti-Bolt-zkz-ir-ne-tik">Pagrindinis Naktinio Saimono projektas, skirtas gaudyti Bolt zkz ir ne tik<a class="anchor-link" href="#Pagrindinis-Naktinio-Saimono-projektas,-skirtas-gaudyti-Bolt-zkz-ir-ne-tik">&#182;</a></h2><p>Čia yra Naktinio Saimono pakurti mappsai, kur rodomas Bolt restoranų darbo laikas ir užimtumas. Restoranų užimtumo žemėlapiai yra kasvalandiniai. Juos yra prasmė naudoti visada, kai tik užsakymai krenta retai. Tuomet pasijungus žemėlapius apsimoka judėti link tų vietų, kur yra didesni veikiančių restoranų telkiniai.</p>
 <ul>
 <li><a href="./RestaurantActivityMaps/bolt_animation_test_Mon.html">Monday</a></li>
 <li><a href="./RestaurantActivityMaps/bolt_animation_test_Tue.html">Tueday</a></li>
@@ -14606,13 +14631,6 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <li><a href="./RestaurantActivityMaps/bolt_animation_test_Fri.html">Friday</a></li>
 <li><a href="./RestaurantActivityMaps/bolt_animation_test_Sat.html">Saturday</a></li>
 <li><a href="./RestaurantActivityMaps/bolt_animation_test_Sun.html">Sunday</a></li>
-</ul>
-<p><b><font color='green'> Įvariomis nuorodomis dalinuosi. </font></b>  <strong>Te:</strong></p>
-<ul>
-<li>koks buvo uždarbis kiekvienos dienos realiu laiku dirbant per Bolt app'są: <a href="./stats/payments/2023-02-18/preview.html">2023-02-18</a></li>
-<li>Besisvaiginančio kurjerio užrašai. Kiek rezistencinis reportažas apie tai, kaip buvo uždirbti 109 eurai per vieną parą su tik iki 60 km vienu įkrovimu galinčiu nuvažiuoti vienaračiu: <a href="./journey_remarks/2023_04_14.html">Štai jums nuoroda</a></li>
-<li>Kolegos, irgi dirbančio Bolt, blogas: <a href="https://bolt-eimz.onrender.com/">https://bolt-eimz.onrender.com/</a></li>
-<li><a href="https://www.youtube.com/watch?v=0NG6Dk47Zro">A short documentary about the legendary best PIZZA delivery man Biller Meier</a></li>
 </ul>
 
 </div>
