Significant updates of NightSimon blog

--- a/index.html
+++ b/index.html
@@ -14622,7 +14622,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Pagrindinis-Naktinio-Saimono-projektas,-skirtas-gaudyti-Bolt-zkz-ir-ne-tik">Pagrindinis Naktinio Saimono projektas, skirtas gaudyti Bolt zkz ir ne tik<a class="anchor-link" href="#Pagrindinis-Naktinio-Saimono-projektas,-skirtas-gaudyti-Bolt-zkz-ir-ne-tik">&#182;</a></h2><p>Čia yra Naktinio Saimono pakurti mappsai, kur rodomas Bolt restoranų darbo laikas ir užimtumas. Restoranų užimtumo žemėlapiai yra kasvalandiniai. Juos yra prasmė naudoti visada, kai tik užsakymai krenta retai. Tuomet pasijungus žemėlapius apsimoka judėti link tų vietų, kur yra didesni veikiančių restoranų telkiniai.</p>
+<h2 id="Pagrindinis-Naktinio-Saimono-projektas,-skirtas-gaudyti-Bolt-zkz">Pagrindinis Naktinio Saimono projektas, skirtas gaudyti Bolt zkz<a class="anchor-link" href="#Pagrindinis-Naktinio-Saimono-projektas,-skirtas-gaudyti-Bolt-zkz">&#182;</a></h2><p>Čia yra Naktinio Saimono pakurti mappsai, kur rodomas Bolt restoranų darbo laikas ir užimtumas. Restoranų užimtumo žemėlapiai yra kasvalandiniai. Juos yra prasmė naudoti visada, kai tik užsakymai krenta retai. Tuomet pasijungus žemėlapius apsimoka judėti link tų vietų, kur yra didesni veikiančių restoranų telkiniai.</p>
 <ul>
 <li><a href="./RestaurantActivityMaps/bolt_animation_test_Mon.html">Monday</a></li>
 <li><a href="./RestaurantActivityMaps/bolt_animation_test_Tue.html">Tueday</a></li>
